--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,19 @@
 
     <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <style>
+        @import url('https://rsms.me/inter/inter.css');
+
+        html, .ql-editor {
+            font-family: 'Inter', sans-serif;
+        }
+
+        @supports (font-variation-settings: normal) {
+            html {
+                font-family: 'Inter var', sans-serif;
+            }
+        }
+
         html, body {
-            background: #E5E5E5;
             height: 100vh;
             box-sizing: border-box;
         }
@@ -21,46 +32,81 @@
             display: flex;
             margin: 0;
             padding: 0;
+            font-size: 16px;
+        }
+
+        .ql-editor {
+            color: #0F4359;
+            font-size: 16px;
         }
 
         section {
             width: 50%;
+            padding: 4em;
+            position: relative;
         }
 
         section + section {
             border-left: 2px solid #0F4359;
         }
 
+        .name {
+            color: #0F4359;
+            position: absolute;
+            top: 1.5em;
+            left: 1.5em;
+            font-weight: bold;
+        }
+
         #refresh {
             position: fixed;
-            top: 1em;
-            right: 1em;
+            top: 1.5em;
+            right: 1.5em;
             fill: #0F4359;
+        }
+
+        .faded {
+            color: #E5E5E5;
         }
     </style>
 </head>
 <body>
 <section>
+    <div class="name user">You</div>
     <div id="editor"></div>
 </section>
 
 <section>
-    <svg id="refresh" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
+    <div class="name duet">Duet</div>
+    <svg id="refresh" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+        <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/>
+        <path d="M0 0h24v24H0z" fill="none"/>
+    </svg>
+    <div id="content"></div>
 </section>
 <script>
+    function getInput() {
+        return quill.getText().split('\n').join(' ')
+    }
+
     $(document).ready(() => {
         var quill = new Quill('#editor');
+        window.quill = quill
+
+        // When you type in You, write it, faded, to Duet.
+        $('#editor').keypress(event => {
+            $('#content').text(getInput())
+        })
 
         // When you press the refresh button, POST to the backend.
         $('#refresh').click(event => {
-            const text = quill.getText().split('\n').join(' ')
-            $.post('/api/generate', {'text': text}).done(data => {
-                alert(data)
+            $.ajax('/api/generate', {
+                type: "POST", dataType: "json", data: JSON.stringify({text: getInput(quill)})
+            }).done(data => {
+                console.log(data)
+                $('#content').text(data.text)
             })
         });
-
-
-        //
 
     })
 </script>
