--- a/templates/index.html
+++ b/templates/index.html
@@ -35,9 +35,10 @@
             font-size: 16px;
         }
 
-        .ql-editor {
+        .ql-editor, section {
             color: #0F4359;
             font-size: 16px;
+            padding: 0;
         }
 
         section {
@@ -82,7 +83,7 @@
         <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/>
         <path d="M0 0h24v24H0z" fill="none"/>
     </svg>
-    <div id="content"></div>
+    <div id="content" class="faded"></div>
 </section>
 <script>
     function getInput() {
@@ -103,8 +104,9 @@
             $.ajax('/api/generate', {
                 type: "POST", dataType: "json", data: JSON.stringify({text: getInput(quill)})
             }).done(data => {
-                console.log(data)
-                $('#content').text(data.text)
+                $(`<span>${data.response}</span>`).insertAfter($('.faded').last())
+            }).fail(() => {
+                alert("bugggzz")
             })
         });
 
