--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
     <div id="editor"></div>
 </section>
 
-<section>
+<section id="ai-pane">
     <div class="name duet">Duet</div>
     <svg id="refresh" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/>
@@ -86,9 +86,14 @@
     <div id="content" class="faded"></div>
 </section>
 <script>
-    function getInput() {
+    function getDuetText() {
+        return $('#ai-pane').text().replace(/\s+/g, ' ')
+    }
+
+    function getHumanText() {
         return quill.getText().split('\n').join(' ')
     }
+
 
     $(document).ready(() => {
         var quill = new Quill('#editor');
@@ -96,15 +101,15 @@
 
         // When you type in You, write it, faded, to Duet.
         $('#editor').keypress(event => {
-            $('#content').text(getInput())
+            $('#content').text(getHumanText())
         })
 
         // When you press the refresh button, POST to the backend.
         $('#refresh').click(event => {
             $.ajax('/api/generate', {
-                type: "POST", dataType: "json", data: JSON.stringify({text: getInput(quill)})
+                type: "POST", dataType: "json", data: JSON.stringify({text: getDuetText()})
             }).done(data => {
-                $(`<span>${data.response}</span>`).insertAfter($('.faded').last())
+                $(`<span>${data.response}</span>`).insertAfter($('#ai-pane').children().last())
             }).fail(() => {
                 alert("bugggzz")
             })
