--- a/templates/index.html
+++ b/templates/index.html
@@ -52,6 +52,11 @@
             line-height: 32px;
         }
 
+        #ai-content {
+            font-size: 16px;
+            line-height: 32px;
+        }
+
         .contentholder {
             flex-flow: row wrap;
         }
@@ -76,15 +81,50 @@
         }
 
         #refresh {
-            position: fixed;
-            top: 4em;
-            right: 8em;
             fill: #0F4359;
         }
 
         .faded {
-            color: #E5E5E5;
+            color: rgba(15,67,89,.33);
         }
+
+        .actions {
+            display: flex;
+            flex-direction: row;
+            margin-top: 4em;
+        }
+
+        .actionPic {
+            padding-left: 6px;
+        }
+
+        .actionLabel {
+            font-size: 12px;
+            line-height: 14px;
+            font-weight: 500;
+            padding-left: 4px;
+            padding-right: 4px;
+        }
+
+        .button {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            padding: 4px;
+            border-radius: 8px;
+            border: 2px solid #0F4359;
+            transition: 0.2s all;
+            margin: 8px;
+            cursor: default;
+        }
+
+        .button:hover {
+            margin-top: 6px;
+            margin-bottom: 10px;
+            box-shadow: 0px 8px 16px rgba(15,67,89,.33);
+        }
+
+
     </style>
 </head>
 <body>
@@ -95,12 +135,22 @@
 
 <section id="ai-pane">
     <div class="name duet">Duet</div>
-    <svg id="refresh" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-        <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/>
-        <path d="M0 0h24v24H0z" fill="none"/>
-    </svg>
-    <div id="ai-content" class="contentholder">
+    <div id="duet-content" class="contentholder">
         <span id="content" class="faded"></div>
+    </div>
+    <div class="actions">
+        <div class="button">
+            <span class="actionPic">✅</span>
+            <span class="actionLabel">ACCEPT</span>
+        </div>
+        <div id="refresh" class="button" >
+            <span class="actionPic">👀</span>
+            <span class="actionLabel">MOAR</span>
+        </div>
+        <div id="clear" class="button">
+            <span class="actionPic">❌</span>
+            <span class="actionLabel">CLEAR</span>
+        </div>
     </div>
 </section>
 <script>
@@ -127,11 +177,18 @@
             $.ajax('/api/generate', {
                 type: "POST", dataType: "json", data: JSON.stringify({text: getDuetText()})
             }).done(data => {
-                $(`<span id="content">${data.response}</span>`).insertAfter($('#ai-content').children().last())
+                $(`<span id="ai-content" >${data.response}</span>`).insertAfter($('#duet-content').children().last())
             }).fail(() => {
                 alert("bugggzz")
             })
         });
+
+        $('#clear').click(event => {
+            $('*[id*=ai-content]:visible').each(function() {
+                $(this).remove();
+                $('#content').text(getHumanText());
+            });
+        })
 
     })
 </script>
