--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,8 @@
         .ql-editor.ql-blank::before {
             color: rgba(15,67,89,.33);
             content: attr(data-placeholder);
-            left: 0;
+            font-style: normal;
+            left: 2px;
             top: 4px;
             position: absolute;
         }
