--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>Duet</title>
     <script src="//cdn.quilljs.com/1.3.6/quill.js"></script>
     <script
-            src="http://code.jquery.com/jquery-3.3.1.min.js"
+            src="//code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
 
