--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
             <span class="actionLabel">MOAR</span>
         </div>
     </div>
+    <!--<p class="signature">Made with ❤️ by Jason Benn, Austin Hou, and Christina Kim</p>-->
 </section>
 
 <script>
