--- a/static/styles.css
+++ b/static/styles.css
@@ -153,6 +153,16 @@ textarea:focus, input:focus{
     outline: none;
 }
 
+.signature {
+    color: rgba(15,67,89,.33);
+    position: absolute;
+    bottom: 6em;
+    right: 8em;
+    text-align: right;
+    width: calc(100% - 16em);
+    font-size: 12px;
+}
+
 @media only screen and (max-width: 480px) {
     body {
         width: 100%;
