--- a/templates/index.html
+++ b/templates/index.html
@@ -14,17 +14,19 @@
 </head>
 <body>
 <section>
-    <div class="name user">
-        <input id="editor-title" type="text" />
-    </div>
-    <div id="editor"></div>
-    <div class="actions">
-        <div id="refresh" class="button" >
-            <span class="actionPic">👀</span>
-            <span class="actionLabel">MOAR</span>
+    <div>
+        <div class="name user">
+            <input id="editor-title" type="text" />
+        </div>
+        <div id="editor"></div>
+        <div class="actions">
+            <div id="refresh" class="button" >
+                <span class="actionPic">👀</span>
+                <span class="actionLabel">MOAR</span>
+            </div>
         </div>
     </div>
-    <!--<p class="signature">Made with ❤️ by Jason Benn, Austin Hou, and Christina Kim</p>-->
+    <p class="signature">Made with ❤️ by Jason Benn, Austin Hou, and Christina Kim</p>
 </section>
 
 <script>
