--- a/static/styles.css
+++ b/static/styles.css
@@ -9,7 +9,7 @@ html, .ql-editor {
 }
 
 .ql-editor.ql-blank::before {
-    color: rgba(15,67,89,.33);
+    color: rgba(15,37,89,.33);
     content: attr(data-placeholder);
     font-style: normal;
     left: 2px;
@@ -33,14 +33,14 @@ body {
     margin: 0;
     padding: 0;
     font-size: 16px;
-    background-color: #F7FBFD;
+    background-color: #FAFBFD;
     width: 60vw;
     margin-left: auto;
     margin-right: auto;
 }
 
 .ql-editor, section {
-    color: #0F4359;
+    color: #0F1339;
     font-size: 16px;
     padding: 0;
 }
@@ -68,7 +68,7 @@ section {
     width: 100%;
     max-width: 100%;
     padding: 8em;
-    padding-top: 12em;
+    padding-top: 10em;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -76,11 +76,11 @@ section {
 }
 
 section + section {
-    border-left: 2px solid #0F4359;
+    border-left: 2px solid #0F1339;
 }
 
 .name {
-    color: #0F4359;
+    color: #0F1339;
     position: absolute;
     top: 6em;
     left: 8em;
@@ -89,7 +89,7 @@ section + section {
 }
 
 #refresh {
-    fill: #0F4359;
+    fill: #0F1339;
     margin-bottom: 4em;
 }
 
@@ -100,7 +100,8 @@ section + section {
 .actions {
     display: flex;
     flex-direction: row;
-    margin-top: calc(4em - 20px);
+    justify-content: flex-end;
+    margin-top: calc(4em - 12px);
 }
 
 .actionPic {
@@ -113,15 +114,18 @@ section + section {
     font-weight: 500;
     padding-left: 4px;
     padding-right: 4px;
+    color: #FAFBFD;
 }
 
 .button {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 4px;
+    padding: 12px;
+    padding-left: 20px;
+    padding-right: 20px;
     border-radius: 8px;
-    border: 2px solid #0F4359;
+    background-color: rgba(27,159,255,1);
     transition: 0.2s all;
     margin-right: 16px;
     margin-top: 8px;
@@ -130,9 +134,7 @@ section + section {
 }
 
 .button:hover {
-    margin-top: 6px;
-    margin-bottom: 10px;
-    box-shadow: 0px 8px 16px rgba(15,67,89,.33);
+    box-shadow: 0px 4px 16px rgba(27,159,255,.33);
 }
 
 .hideButton {
@@ -145,7 +147,7 @@ input {
     border: none;
     font-size: 32px;
     font-family: 'Inter var', sans-serif;
-    color: rgb(15,67,89);
+    color: #0F1339;
     font-weight: 500;
 }
 
