--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
             crossorigin="anonymous"></script>
 
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
 </head>
 <body>
 <section>
@@ -95,6 +96,18 @@
                 //not in the editor
             }
         });
+
+        const socket = io();
+        socket.on('token', (event) => {
+            console.log(event);
+        });
+        socket.on('connect', () => {
+            socket.emit('client_connected', {data: 'New client!'});
+        });
+        // socket.on('disconnect', () => {
+        //     console.log('disconnected');
+        // });
+
 
     })
 </script>
