--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,7 @@
         <div id="editor"></div>
         <div class="actions">
             <div id="refresh" class="button" >
-                <span class="actionPic">👀</span>
-                <span class="actionLabel">Moar</span>
+                <span class="actionLabel">👀 Moar</span>
             </div>
         </div>
     </div>
