--- a/static/styles.css
+++ b/static/styles.css
@@ -106,15 +106,19 @@ section + section {
 
 .actionPic {
     padding-left: 6px;
+    font-size: 18px;
+    line-height: 18px;
 }
 
 .actionLabel {
-    font-size: 12px;
-    line-height: 14px;
+    font-size: 14px;
+    line-height: 16px;
     font-weight: 500;
     padding-left: 4px;
     padding-right: 4px;
     color: #FAFBFD;
+
+    transition: 0.2s all;
 }
 
 .button {
@@ -145,6 +149,17 @@ section + section {
 
 .button:hover {
     box-shadow: 0px 4px 16px rgba(27,189,205,.33);
+    width: 112px;
+    height: 36px;
+    margin-top: 6px;
+    margin-bottom: 10px;
+    margin-left: -2px;
+    margin-right: -2px;
+}
+
+.button:hover .actionLabel {
+    font-size: 15px;
+    line-height: 17px;
 }
 
 .hideButton {
