--- a/static/styles.css
+++ b/static/styles.css
@@ -162,6 +162,16 @@ section + section {
     line-height: 17px;
 }
 
+.marquee:hover {
+    box-shadow: 0px 4px 16px rgba(27,189,205,0);
+    width: 108px;
+    height: 32px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
 .hideButton {
     display: none;
 }
