--- a/templates/index.html
+++ b/templates/index.html
@@ -76,6 +76,7 @@
                 $( 'div.button' ).replaceWith( '<div id="refresh" class="button" ><span class="actionPic">👀</span><span class="actionLabel">Moar</span></div>' );
             }).fail(() => {
                 alert("bugggzz")
+                $( 'div.button' ).replaceWith( '<div id="refresh" class="button" ><span class="actionPic">👀</span><span class="actionLabel">Moar</span></div>' );
             })
             
         });
