--- a/static/styles.css
+++ b/static/styles.css
@@ -288,6 +288,21 @@ textarea:focus, input:focus{
         justify-content: center;
     }
 
+    .button:hover {
+        box-shadow: 0px 0px 0px 0px transparent;
+        width: 128px;
+        height: 42px;
+        margin-top: 24px;
+        margin-bottom: 8px;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    .button:hover .actionLabel {
+        font-size: 18px;
+        line-height: 18px;
+    }
+
     .signature {
         width: 100%;
         margin-bottom: calc(6em - 32px);
