--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
 
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
+    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5cdc95407f177d00120fa30b&product='inline-share-buttons' async='async'></script>
 </head>
 <body>
 <section>
@@ -21,13 +22,26 @@
         </div>
         <div id="editor"></div>
         <div class="actions">
+            <div>
             <div id="refresh"><div class="button" >
                 <span class="actionLabel">👀 Moar</span>
                 </div>
             </div>
+            <div class="a2a_kit a2a_kit_size_32 a2a_default_style rightAlign">
+                <a class="a2a_button_facebook"></a>
+                <a class="a2a_button_twitter"></a>
+                <a class="a2a_button_email"></a>
+            </div>
+        </div>
         </div>
     </div>
-    <p class="signature">Made with ❤️ by Jason Benn, Austin Hou, Christina Kim, and Ben Mann <br /><a href="https://aiwriter.typeform.com/to/lh2l0F">Feedback?</a></p>
+    <script async src="https://static.addtoany.com/menu/page.js"></script>
+
+
+    <p class="signature">
+        Made with ❤️ by Jason Benn, Austin Hou, Christina Kim, and Ben Mann <br />
+        <a href="https://aiwriter.typeform.com/to/lh2l0F">Feedback?</a>
+    </p>
 </section>
 
 <script>
