--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
 
     <p class="signature">
         Made with ❤️ by Jason Benn, Austin Hou, Christina Kim, and Ben Mann <br />
-        <a href="https://aiwriter.typeform.com/to/lh2l0F">Feedback?</a>
+        <a class="tallLineHeight" href="https://aiwriter.typeform.com/to/lh2l0F">Feedback?</a>
     </p>
 </section>
 
