--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>Duet</title>
+    <!-- Primary Meta Tags -->
+<title>Duet - The AI Cure to Writer's Block</title>
+<meta name="title" content="Duet - The AI Cure to Writer's Block">
+<meta name="description" content="Add a dose of entropy to your creative writing with the full power of GPT-2">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://metatags.io/">
+<meta property="og:title" content="Duet - The AI Cure to Writer's Block">
+<meta property="og:description" content="Add a dose of entropy to your creative writing with the full power of GPT-2">
+<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:title" content="Duet - The AI Cure to Writer's Block">
+<meta property="twitter:description" content="Add a dose of entropy to your creative writing with the full power of GPT-2">
+<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
